gccida/g2/resolve_operand_name_1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/resolve_operand_name_1/src/stmt.c:2618:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)chain->int_cst.rtl[1].fld[0]; 
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/resolve_operand_name_1/src/stmt.c:2633:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)inputs->int_cst.rtl[1].fld[0]; 
                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/resolve_operand_name_1/src/stmt.c:2657:14: error: use of undeclared identifier 'off_646752'
sprintf( p, &off_646752[1], v5); 
             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/resolve_operand_name_1/src/obj/stmt.o] Error 1
